# visu-maps-engine

./: CMakeLists.txt  README.md
.github/workflows/: core-quality-gate.yml
apps/: README.md
apps/android/: README.md
apps/desktop-qt/: README.md
apps/ios/: README.md
apps/web/: README.md
backends/: CMakeLists.txt  README.md  backends_factory.cpp  backends_factory.hpp
backends/gl46/: README.md
backends/gles/: README.md
backends/metal/: README.md
backends/vulkan/: CMakeLists.txt  README.md
backends/vulkan/include/backends/vulkan/: vulkan_command_buffer.hpp  vulkan_command_encoder.hpp  vulkan_gfx_device.hpp  vulkan_gfx_instance.hpp  vulkan_gfx_queue.hpp  vulkan_gfx_swapchain.hpp  vulkan_helpers.hpp  vulkan_resources.hpp
backends/vulkan/src/: vulkan_command_buffer.cpp  vulkan_command_encoder.cpp  vulkan_gfx_device.cpp  vulkan_gfx_instance.cpp  vulkan_gfx_queue.cpp
backends/webgl/: README.md
cmake/: README.md
docs/: FEATURES.md  README.md
docs/api/: README.md  engine_lifecycle_usage.md
docs/architecture/: README.md
docs/decisions/: README.md
engine/: CMakeLists.txt  README.md
engine/core/: CMakeLists.txt  README.md
engine/core/cmake/: README.md
engine/core/include/: README.md
engine/core/include/engine/core/: i_engine_lifecycle.hpp
engine/core/include/engine/core/contracts/: README.md  i_engine_lifecycle.hpp  i_engine_logger.hpp  i_engine_tracer.hpp  i_lifecycle_observer.hpp  i_observability_sink.hpp  lifecycle_observer_adapter.hpp  noop_observability_sink.hpp
engine/core/include/engine/core/lifecycle/: README.md  engine_lifecycle_controller.hpp
engine/core/include/engine/core/types/: README.md  engine_error_codes.hpp  engine_lifecycle_events.hpp  engine_logging.hpp  engine_models.hpp  engine_observability.hpp  engine_trace_events.hpp
engine/core/include/engine/core/utils/: README.md
engine/core/src/: README.md  types_engine_models.cpp
engine/core/src/contracts/: README.md  lifecycle_observer_adapter.cpp
engine/core/src/lifecycle/: README.md  engine_lifecycle_controller.cpp
engine/core/src/utils/: README.md
engine/core/tests/: README.md  coverage_baseline.md
engine/core/tests/integration/: README.md  engine_lifecycle_flow_integration.cpp  engine_lifecycle_observability_disabled_integration.cpp  engine_lifecycle_observability_enabled_integration.cpp
engine/core/tests/unit/: README.md  engine_lifecycle_observability_unit_tests.cpp  engine_types_contracts_unit_tests.cpp
engine/gfx/: CMakeLists.txt  README.md
engine/gfx/cmake/: README.md
engine/gfx/include/: README.md
engine/gfx/include/engine/gfx/: commands.hpp  pipeline.hpp  resources.hpp
engine/gfx/include/engine/gfx/commands/: README.md  command_common.hpp  factory.hpp  i_command_buffer.hpp  i_command_encoder.hpp
engine/gfx/include/engine/gfx/contracts/: README.md  factory.hpp  i_gfx_device.hpp  i_gfx_instance.hpp  i_gfx_queue.hpp  i_gfx_swapchain.hpp
engine/gfx/include/engine/gfx/pipeline/: README.md  pipeline_desc.hpp  validation.hpp
engine/gfx/include/engine/gfx/resources/: README.md  backend_translation.hpp  debug_lifecycle.hpp  factory.hpp  interfaces.hpp  resource_common.hpp  resource_desc.hpp  validation.hpp
engine/gfx/include/engine/gfx/sync/: README.md
engine/gfx/src/: README.md
engine/gfx/src/commands/: README.md  simple_command_encoder.cpp
engine/gfx/src/contracts/: README.md  stub_gfx_platform.cpp  stub_gfx_queue.cpp
engine/gfx/src/pipeline/: README.md
engine/gfx/src/resources/: README.md  backend_translation.cpp  stub_resources.cpp  stub_resources.hpp
engine/gfx/src/sync/: README.md
engine/gfx/tests/: README.md
engine/gfx/tests/integration/: README.md  frame_basic_integration_tests.cpp  queue_submit_integration_tests.cpp
engine/gfx/tests/unit/: README.md  command_encoder_contract_tests.cpp  pipeline_contract_tests.cpp  resources_contract_tests.cpp
engine/platform_abstraction/: README.md
engine/render/: CMakeLists.txt  README.md
engine/render/include/engine/render/: basic_frame_renderer.hpp  frame_plan.hpp  material_cache_invalidation_bridge.hpp  material_pipeline_cache.hpp  render_descriptors.hpp  scene_data_adapter.hpp  scene_render_data.hpp
engine/render/src/: basic_frame_renderer.cpp  frame_plan.cpp  material_pipeline_cache.cpp  scene_data_adapter.cpp
engine/render/tests/integration/: basic_frame_path_integration_tests.cpp
engine/render/tests/unit/: render_frame_plan_unit_tests.cpp
engine/sensors/: README.md
engine/services/: CMakeLists.txt  README.md
engine/services/include/engine/services/: theme_style_events.hpp
engine/tiles/: CMakeLists.txt  README.md
engine/tiles/include/engine/tiles/: render_snapshot.hpp  render_snapshot_cache.hpp
engine/tiles/src/: render_snapshot_cache.cpp
scripts/: README.md  run_core_observability_tests.sh  run_gfx_tests.sh  run_render_tests.sh
shaders/: README.md
shaders/glsl/: README.md
shaders/msl/: README.md
shaders/shared/: README.md
shaders/spirv/: README.md
shaders/tools/: README.md
tests/: README.md
tests/integration/: README.md
tests/performance/: README.md  tick_observability_benchmark.cpp
tests/unit/: README.md
tools/: README.md
tools/asset_pipeline/: README.md
tools/debug_tools/: README.md
tools/shader_compiler/: README.md
